# Telegram-CRM-bot

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
src/: config.py  database.py  main.py
src/api/: app.py
src/bot/: router.py
src/bot/admin/: analytics.py  appointments.py  campaigns.py  clients.py  schedule.py  slots.py
src/bot/client/: booking.py  cancellation.py  car.py  feedback.py  profile.py  registration.py
src/bot/common/: filters.py  keyboards.py  texts.py
src/models/: __init__.py  appointment.py  appointment_status_history.py  audit_log.py  base.py  blocked_slot.py  car.py  client.py  feedback.py  lift.py  marketing_campaign.py  service.py  staff.py
src/scheduler/: tasks.py
src/schemas/: appointment.py  campaign.py  car.py  client.py  feedback.py  service.py  staff.py
src/services/: availability.py  booking.py  campaign.py  client_profile.py  feedback.py  lift_allocation.py  reminder.py  staff_assignment.py
src/utils/: logging.py
tests/: conftest.py  test_availability.py  test_booking.py
