[project]
name = "telegram-crm-autoservice"
version = "1.0.0"
description = "Telegram CRM-бот для автосервиса"
requires-python = ">=3.12"
dependencies = [
    "aiogram==3.15.0",
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "redis==5.2.1",
    "apscheduler==3.10.4",
    "pydantic>=2.4.1,<2.10",
    "pydantic-settings>=2.0,<3",
    "python-dotenv==1.0.1",
    "structlog==24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "httpx==0.28.1",
    "aiosqlite==0.20.0",
    "ruff==0.8.4",
    "mypy==1.13.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
